testsuite/tests/dependent/should_fail/TypeSkolEscape.stderr

TypeSkolEscape.hs:9:52: error:
    • Expected kind ‘k0’, but ‘a’ has kind ‘TYPE v’
    • In the type ‘forall (v :: RuntimeRep) (a :: TYPE v). a’
      In the type declaration for ‘Bad’
